# microcoreutils

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.MD  README.md  TODO  config.h.in  configure  configure.ac  file  kconfig
.wiki/: convert.sh
autom4te.cache/: output.0  output.2  requests  traces.0  traces.2
doc/: basename.1  cal.1  cat.1  chgrp.1  chmod.1  chown.1  cksum.1  clear.1  cmp.1  cp.1  date.1  dirname.1  du.1  echo.1  env.1  expr.1  false.1  grep.1  halt.1  halt.8  head.1  id.1  init.1  init.8  kill.1  link.1  ln.1  logname.1  mkdir.1  mkfifo.1  mv.1  nice.1  pathchk.1  printf.1  pwd.1  renice.1  rm.1  rmdir.1  sleep.1  split.1  (+10 more)
include/: buf.h  chown.h  clearenv.h  common.h  errprintf.h  openfile.h  prompt.h
src/: basename.c  buf.h  cal.c  cat.c  chgrp.c  chmod.c  chown.c  chown.h  cksum.c  clear.c  clearenv.h  cmp.c  common.h  cp.c  cut.c  date.c  dd.c  dirname.c  du.c  echo.c  ed.c  env.c  expr.c  false.c  grep.c  halt.c  head.c  id.c  init.c  kill.c  link.c  ln.c  login.c  logname.c  ls.c  mkdir.c  mkfifo.c  mv.c  nice.c  pathchk.c  (+18 more)
